--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-"""
-# Anthropic API Key
+# LLM Provider (anthropic or openai)
+LLM_PROVIDER=openai
+
+# Anthropic API Key (Claudeを使う場合)
 ANTHROPIC_API_KEY=your_api_key_here
 
+# OpenAI Compatible API (LM Studioなど)
+OPENAI_API_KEY=not-needed  # LM StudioではダミーでもOK
+OPENAI_BASE_URL=http://localhost:1234/v1
+
 # Model Configuration
-MODEL_NAME=claude-sonnet-4-20250514
+MODEL_NAME=local-model  # LM Studioで読み込んだモデル名
 MAX_TOKENS=1000
 
 # Memory Configuration
@@ -14,4 +20,3 @@ EMBEDDING_MODEL=intfloat/multilingual-e5-base
 # RAG Configuration
 MAX_MEMORY_RESULTS=5
 SHORT_TERM_MEMORY_SIZE=5
-"""
