--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ OPENAI_API_KEY=not-needed  # LM StudioではダミーでもOK
 OPENAI_BASE_URL=http://localhost:1234/v1
 
 # Model Configuration
-MODEL_NAME=local-model  # LM Studioで読み込んだモデル名
+MODEL_NAME=qwen3-vl-8b    # LM Studioで読み込んだモデル名
 MAX_TOKENS=1000
 
 # Memory Configuration
