--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,12 @@ OPENAI_API_KEY=not-needed  # LM StudioではダミーでもOK
 OPENAI_BASE_URL=http://localhost:1234/v1
 
 # Model Configuration
-MODEL_NAME=qwen3-vl-8b    # LM Studioで読み込んだモデル名
+MODEL_NAME=qwen/qwen3-8b    # LM Studioで読み込んだモデル名
 MAX_TOKENS=1000
+
+# Character Configuration
+COMPACT_PROMPT=true  # true=簡潔版プロンプト（推奨）、false=詳細版プロンプト
+
 
 # Memory Configuration
 CHROMA_DB_PATH=./data/chroma_db
